# my_bot

./: package.xml
config/: rviz_view.rviz
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py
worlds/: obstacles.world
